my-apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: searxng
