my-apps/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng-route
  namespace: searxng
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "searxng.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          port: 8080
          weight: 1
